static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Josefin+Slab&display=swap');

/* basic stylings and colours */

.main-teal {
    color: #91c8c1;
}

.shadow-overlay {
    background-color: rgba(0, 0, 0, 0.5);
    height: 100%;
    width: 100%;
}

.aqua-background {
    background-color: #26a69a;
}

.teal-background {
    background-color: #91c8c1;
}

.light-purple {
    color: #C191C8;
}

.light-purple-background {
    background-color: #C191C8;
}

.pale-gold {
    color: #C8C191;
}

.big-font {
    font-size: 2.1em;
}

.background-view-height {
    min-height: 100vh;
}

.pale-gold-background {
    background-color: #C8C191;
}

.bright-gold {
    color: #f2e065;
}

.bright-gold-background {
    background-color: #f2e065;
}

.true-purple {
    color: #831D91;
}

.pale-teal-background {
    background-color: #E1F9F5;
}

/* style taken from Code Institute walkthrough */

.text-shadow {
    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
}

.text-shadow-teal {
    text-shadow: 2px 2px 2px rgba(145, 200, 200, 0.5);
}

.amatic-font {
    font-family: 'Amatic SC', cursive;;
}

.josefin-font {
    font-family: 'Josefin Slab', serif;
}

.row {
    margin-bottom: 0px;
}

.margin-top-30 {
    margin-top: 30px;
}

.margin-top-btm-20 {
    margin-top: 20px;
    margin-bottom: 20px;
}

/* navbar stylings */

#logo-div {
    margin-bottom: 0px;
}

/* center my nav links on navbar */

.center-nav {
    display:flex;
    justify-content:center;
}

nav div ul li a {
    font-size: 2.1em;
    color: black;
    margin-left: 10px;
}

.border-left {
    border-left: 5px solid #C8C191;
}

#main-page-logo {
   max-height: 200px;
   padding: 20px;
}

img.responsive-img {
    max-width: 80%;
}

.navbar-mob {
    margin-top: 25px;
}

.sidenav li>a {
    font-size: 2.1em;
}

.sidenav li:hover {
    background-color: #C8C191;
}

nav a {
    display: inline-flex;
    color: #f2e065;
    font-size: 1.6em;
}

nav .sidenav-trigger i {
    color: #f2e065;
    font-size: 1.2em;
    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
}

/* styling for hero image on index.html */

.hero-class {
    background-image: url(/static/images/book-hero-img.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 60vh;
}

#cta-section {
    border: 3px solid #f2e065;
    height: 300px;
    background-color: rgba(193,145,200, 0.8);
}

#review-cta-btn {
    margin-right: 10px;
    margin-bottom: 10px;
}

#register-cta-btn {
    margin-right: 10px;
    margin-bottom: 10px;
}

#cta-login-option {
    display: block;
}

#cta-login-option a {
    color: #f2e065;
}

#ratings-carousel div h4 {
    padding-top: 35px;
    margin-top: 0px;
    padding-bottom: 35px;
    border: 3px solid #f2e065;
    background-color: rgba(193,145,200, 0.8);
}

/* Stylings for registration page */

#register-heading {
    margin-top: 0px;
    padding-top: 7px;
    padding-bottom: 7px;
    border: 15px solid #C191C8;
}

#register-button {
    background-color: #f2e065;
    min-width: 20vw;
    color: black;
    height: 50px;
    font-weight: 600;
    font-size: 1.5em;
}

 h3 {
    margin-top: 0px;
}

.h3-header {
    margin-top: 0px;
    padding-top: 20px;
}

